--- a/MyLeasing.Web/MyLeasing.Web.csproj
+++ b/MyLeasing.Web/MyLeasing.Web.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\MyLeasing.Common\MyLeasing.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\owners\" />
+  </ItemGroup>
+
 </Project>
