--- a/MyLeasing.Web/MyLeasing.Web.csproj
+++ b/MyLeasing.Web/MyLeasing.Web.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\lessees\" />
     <Folder Include="wwwroot\images\owners\" />
   </ItemGroup>
 
